# ucx-gaudi

./: build.sh  configure.ac  gaudi_setup.sh
config/m4/: gaudi.m4
examples/: hello_world_util.h
src/: configure.m4
src/tools/perf/: Makefile.am  configure.m4
src/tools/perf/gaudi/: Makefile.am  configure.m4  gaudi_alloc.c
src/ucm/: Makefile.am  configure.m4
src/ucm/event/: event.c
src/ucm/gaudi/: Makefile.am  configure.m4  gaudimem.c  gaudimem.h
src/ucp/core/: ucp_context.c  ucp_mm.h
src/ucs/memory/: memory_type.c  memory_type.h
src/uct/: Makefile.am
src/uct/gaudi/: Makefile.am  configure.m4  ucx-gaudi.pc.in
src/uct/gaudi/base/: gaudi.h  gaudi_device_registry.c  gaudi_device_registry.h  gaudi_dma.c  gaudi_dma.h  gaudi_iface.c  gaudi_iface.h  gaudi_md.c  gaudi_md.h  gaudi_md_struct.h  gaudi_stats.h
src/uct/gaudi/copy/: gaudi_copy_ep.c  gaudi_copy_ep.h  gaudi_copy_iface.c  gaudi_copy_iface.h  gaudi_copy_md.c  gaudi_copy_md.h
src/uct/gaudi/ipc/: gaudi_ipc_cache.c  gaudi_ipc_ep.c  gaudi_ipc_ep.h  gaudi_ipc_iface.h  gaudi_ipc_md.c  gaudi_ipc_md.h
test/gaudi/: Makefile  gaudi_rcache_perf  gaudi_rcache_perf.c  gaudi_ucp_dmabuf_example  gaudi_ucp_dmabuf_example.c  gaudi_uct_dmabuf_example  gaudi_uct_dmabuf_example.c  run_gaudi_rcache_perf.sh  run_gaudi_uct_dmabuf_example.sh
test/gtest/: Makefile.am
uct/: Makefile.am  ucm_interaction.md
uct/base/: gaudi.h  gaudi_dma.c  gaudi_dma.h  gaudi_iface.c  gaudi_iface.h
uct/copy/: gaudi_copy_ep.c  gaudi_copy_ep.h  gaudi_copy_iface.c  gaudi_copy_iface.h  gaudi_copy_md.c  gaudi_copy_md.h
uct/ipc/: gaudi_ipc.inl  gaudi_ipc_cache.h  gaudi_ipc_ep.c  gaudi_ipc_iface.c  gaudi_ipc_md.h
